@@ -1,3 +1,8 @@
+Sat Oct 29 09:39:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (vm_call0_body): follow the original class, not to
+	  loop the prepended module.  [ruby-core:77784] [Bug #12876]
+
 Sat Oct 29 00:14:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enc/trans/windows-1255-tbl.rb: update mapping from 0xCA to
